# icloud-mcp

./: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  run.py
src/icloud_mcp/: auth.py  calendar.py  config.py  contacts.py  email.py  oauth.py  reminders.py  server.py  smartfolders.py
