[project]
name = "icloud-mcp"
version = "0.1.0"
description = "MCP server for iCloud integration (CalDAV, CardDAV, IMAP/SMTP)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "caldav>=1.3.9",
    "vobject>=0.9.6",
    "imapclient>=3.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
